# KaruTeens1

./: .env.example  .env.production  .gitignore  15-03-26  LOCAL_DEV.md  build-test.js  cloudflare_scaling_roadmap.txt  db_test.cjs  eslint.config.js  index.html  lint-errors.txt  lint_output.txt  lint_output_compact.txt  lint_output_unix.txt  package-lock.json  package.json  routes_analysis.txt  site_assessment.txt  site_specification_additions.txt  test.cjs  test.js  tsconfig.json  vercel.json  vite.config.js  website_specification.txt  what_i_want.txt
backend/: .env.example  Cargo.toml  check_output.txt  check_output_2.txt  check_output_3.txt  count_posts.rs  create_indexes.js  create_indexes.mjs  docker-compose.yml  fix_all_string_issues.sh  generate_jwt_secret.sh  render.yaml  test_ably_signing.rs  test_backend.py  test_compile.rs  test_date_serialization.js  test_env  test_env.rs  test_hmac.rs  test_hmac2.rs  test_hmac3.rs
backend/src/: ably.rs  admin.rs  ads.rs  ai.rs  auth.rs  cache.rs.bak  cache_utils.rs  cdn.rs  comments.rs  confessions.rs  content.rs  db.rs  dto.rs  error.rs  events.rs  follows.rs  groups.rs  hookup.rs  lib.rs  main.rs  marketplace.rs  media.rs  messages.rs  models.rs  notifications.rs  pages.rs  payments.rs  playlist.rs  posts.rs  push.rs  rate_limit.rs  reels.rs  revision_materials.rs  routes.rs  search.rs  stats.rs  stories.rs  study_rooms.rs  timetable.rs  user.rs  (+1 more)
backend/src/features/: mod.rs
backend/src/models/: academic.rs  ads.rs  base.rs  comments.rs  content.rs  (+9 more)
backend/tests/: algorithm_test.rs  config_test.rs  models_test.rs
(+385 files in other folders)
