[package]
name = "karuteens_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mongodb = { version = "2.8.2", features = ["tokio-runtime"] }
bson = { version = "2.9", features = ["chrono-0_4", "serde_with", "uuid-1"] }
redis = { version = "0.24.0", features = ["tokio-comp", "tokio-native-tls-comp"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
argon2 = "0.5"
jsonwebtoken = "9.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
futures = "0.3"
sha2 = "0.10.9"
hex = "0.4.3"
aws-config = "1.8.12"
aws-sdk-s3 = "1.119.0"
hmac = "0.12.1"
sha1 = "0.10.6"
dashmap = "6.1.0"
tokio-stream = "0.1.17"
base64 = "0.22"

